--- a/bundle/tech-preview-stable-all-namespaces/eclipse-che-preview-openshift/manifests/che-operator.clusterserviceversion.yaml
+++ b/bundle/tech-preview-stable-all-namespaces/eclipse-che-preview-openshift/manifests/che-operator.clusterserviceversion.yaml
@@ -115,8 +115,8 @@ metadata:
     capabilities: Seamless Upgrades
     categories: Developer Tools
     certified: "false"
-    containerImage: quay.io/eclipse/che-operator@sha256:68fd7b2d651c90c3e101fe836c99135ffe922a3b1927335dcde78de72e349e6d
-    createdAt: "2021-12-03T13:09:29Z"
+    containerImage: quay.io/eclipse/che-operator@sha256:7396450a283682b2703ee6fb512a105890abe18bc5379360b544cbddde5801ea
+    createdAt: "2021-12-08T18:53:14Z"
     description: A Kube-native development solution that delivers portable and collaborative
       developer workspaces.
     operatorframework.io/suggested-namespace: openshift-operators
@@ -126,7 +126,7 @@ metadata:
     operators.operatorframework.io/project_layout: go.kubebuilder.io/v3
     repository: https://github.com/eclipse-che/che-operator
     support: Eclipse Foundation
-  name: eclipse-che-preview-openshift.v7.40.0-all-namespaces
+  name: eclipse-che-preview-openshift.v7.40.1-all-namespaces
   namespace: placeholder
 spec:
   apiservicedefinitions: {}
@@ -948,6 +948,13 @@ spec:
                 - list
                 - watch
             - apiGroups:
+                - authorization.k8s.io
+              resources:
+                - localsubjectaccessreviews
+                - subjectaccessreviews
+              verbs:
+                - create
+            - apiGroups:
                 - batch
               resources:
                 - jobs
@@ -1099,15 +1106,15 @@ spec:
                       - name: OPERATOR_NAME
                         value: che-operator
                       - name: CHE_VERSION
-                        value: 7.40.0
+                        value: 7.40.1
                       - name: RELATED_IMAGE_che_server
-                        value: quay.io/eclipse/che-server@sha256:cb199aaf25db067a7ee4362771b0133ce923472fee6e71acfa653f6392679e73
+                        value: quay.io/eclipse/che-server@sha256:5b0b17f9d40fc1d9ecbb5da714f8d2c9e33ea2cea4e69ec369f5b31e3d31b1b8
                       - name: RELATED_IMAGE_dashboard
-                        value: quay.io/eclipse/che-dashboard@sha256:04fa782a211721aa332116135e108aa928c6cd0b640261546336a297d0eca915
+                        value: quay.io/eclipse/che-dashboard@sha256:c0ec680597bd1ea71fe08b6bae36e02494412b4f92a0a27cda92c37e0918e16f
                       - name: RELATED_IMAGE_plugin_registry
-                        value: quay.io/eclipse/che-plugin-registry@sha256:ded7b41cbfff13a00bbac2dc93c305e4bef9e457d32a47c1e023d3857311f58d
+                        value: quay.io/eclipse/che-plugin-registry@sha256:43f0d01ca6abecb356a9ae2ad4297c7387bc8b0e9328692806cb42764653b49c
                       - name: RELATED_IMAGE_devfile_registry
-                        value: quay.io/eclipse/che-devfile-registry@sha256:92f1aec9db749e752bb1c53f91bc1fca804f0e5b54d4470c4c356410c5bb3c06
+                        value: quay.io/eclipse/che-devfile-registry@sha256:c684712d9123f283824b080f4c2d258338597284a17bf7ba9075d550729ee1f3
                       - name: RELATED_IMAGE_pvc_jobs
                         value: registry.access.redhat.com/ubi8-minimal@sha256:16da4d4c5cb289433305050a06834b7328769f8a5257ad5b4a5006465a0379ff
                       - name: RELATED_IMAGE_postgres
@@ -1115,7 +1122,7 @@ spec:
                       - name: RELATED_IMAGE_postgres_13_3
                         value: quay.io/eclipse/che--centos--postgresql-13-centos7@sha256:71b24684d64da46f960682cc4216222a7e4ed8b1a31dd5a865b3e71afdea20d2
                       - name: RELATED_IMAGE_keycloak
-                        value: quay.io/eclipse/che-keycloak@sha256:9e2c6e38a2c2baf574f7cc50391c1e63a249d4399be68048b50e013775842f21
+                        value: quay.io/eclipse/che-keycloak@sha256:a30a410e78cd7b15084ff21a846db166eecad33287e71426482722d64a109ec3
                       - name: RELATED_IMAGE_che_workspace_plugin_broker_metadata
                         value: quay.io/eclipse/che-plugin-metadata-broker@sha256:df1ea2eadb28dbc97761adf4ea984af5ca941025a67b39c6abe373816a84bba9
                       - name: RELATED_IMAGE_che_workspace_plugin_broker_artifacts
@@ -1212,12 +1219,12 @@ spec:
                         value: quay.io/eclipse/che-plugin-sidecar@sha256:2ba8fffe6f2d64f82896367a34fdb657672984548c7904f906178e8e08294277
                       - name: RELATED_IMAGE_che_plugin_sidecar_plugin_registry_image_IBZWQYJSGU3DUYTCGQYDIZTGMFQTCMRVGY2WEZLCGEZGENDDMQ4DCNRQMNTGCM3GMYZWKZRTMJSTIMRQGQZTAYJWGU3DEZRRMZSTIOBWGM4WGYTGGFTA____
                         value: quay.io/eclipse/che-plugin-sidecar@sha256:bb404ffaa12565beb12b4cd8160cfa3ff3ef3be420430a6562f1fe48639cbf1f
-                      - name: RELATED_IMAGE_che_theia_plugin_registry_image_IBZWQYJSGU3DUNZTGU4DQZRYMQ3GENJQG44DOMRWMU4TAYRUHBSTANTGGEYDKOJUG42TQYZZGM2TGMRTGM4WIYZRMVRTIOBRHEZGKN3GMFQTEZTDG4YQ____
-                        value: quay.io/eclipse/che-theia@sha256:73588f8d6b5078726e90b48e06f10594758c93532339dc1ec48192e7faa2fc71
-                      - name: RELATED_IMAGE_che_machine_exec_plugin_registry_image_IBZWQYJSGU3DUMTFGI2DIZDEGVRDGZLEGBRGCZRQGA2TOMDBGIYWCOJQGRRDIMBWGZQTGNLCGE3DCODBGBQTAZTCGBQWCMBSMUZTINLDGRTGCZLFMVRA____
-                        value: quay.io/eclipse/che-machine-exec@sha256:2e244dd5b3ed0baf00570a21a904b4066a35b1618a0a0fb0aa02e345c4faeeeb
-                      - name: RELATED_IMAGE_che_theia_endpoint_runtime_binary_plugin_registry_image_IBZWQYJSGU3DUZBUGMZDOYRUGBRWEM3BMFSTKZBVHFTDMMJYMMYGMZJVHEYDGNRYGNSWCNDGMU2WCNBRGJTDIZBUGIYWMNZYG5RTON3FMFTDSNBTGE2Q____
-                        value: quay.io/eclipse/che-theia-endpoint-runtime-binary@sha256:d4327b40cb3aae5d59f618c0fe5903683ea4fe5a412f4d421f787c77eaf94315
+                      - name: RELATED_IMAGE_che_theia_plugin_registry_image_IBZWQYJSGU3DUZJZMY2DEZJUMRRDEZJUGA2DKZJZGFQTQMBXMUZTONZYME3GEZJYHBRWKMJVGMYDCYJSMVRTGNLGGQYDINJSMY4GMMJUGY3DOZJZGM3Q____
+                        value: quay.io/eclipse/che-theia@sha256:e9f42e4db2e4045e91a807e3778a6be88ce15301a2ec35f40452f8f14667e937
+                      - name: RELATED_IMAGE_che_machine_exec_plugin_registry_image_IBZWQYJSGU3DUY3DHEZWGNJWMIZWKMTGMQYTKMLEG43GKZBWGZQWKYLFGI2TAMZSGM3TGMRVGIZGCNTDG5STOMRQGM4TQODBGIYWGN3FMU3WGZRRMUYA____
+                        value: quay.io/eclipse/che-machine-exec@sha256:cc93c56b3e2fd151d76ed66aeae250323732522a6c7e7203988a21c7ee7cf1e0
+                      - name: RELATED_IMAGE_che_theia_endpoint_runtime_binary_plugin_registry_image_IBZWQYJSGU3DUNZWGVRTEM3GMRQTKYZYGU4TMMDEGZTDAZDGG44DANBVGM2TGMBWGA2GGN3CMRTDAY3DGI2TIMTCGEZTGOBYGA4DKMJTHE4DSNJUMZTA____
+                        value: quay.io/eclipse/che-theia-endpoint-runtime-binary@sha256:765c23fda5c85960d6f0df780453530604c7bdf0cc2542b133880851398954ff
                       - name: RELATED_IMAGE_che_editor_jupyter_plugin_registry_image_IBZWQYJSGU3DUOBTGQZTSYLFHFSWIY3BMEZWCOJXGUZTMNZUGIZTCNLBG44TCMTGHEZWKNBZHFTDIOJYGQ3WIYJQHE2GGNBYGAYDGMLFMFSTIYTBGQ3Q____
                         value: index.docker.io/ksmster/che-editor-jupyter@sha256:83439ae9edcaa3a97536742315a7912f93e499f49847da094c480031eae4ba47
                       - name: RELATED_IMAGE_dirigible_openshift_plugin_registry_image_IBZWQYJSGU3DUMZTGY2TMMZVMQYWKMBUGAZTMOJXMRSWCMBWG42GEYTCMRRTONBZMM2GEZJSMRRDEOJYGE4GCOJTMI4GKMLFGUZWGM3DGUYTINBRGEZQ____
@@ -1233,7 +1240,7 @@ spec:
                       - name: RELATED_IMAGE_universal_developer_image_plugin_registry_image_IBZWQYJSGU3DUNJTMNSWGNJYMRSDCOJQMRSDCZJQGYYTAMBUG44GCZJYG44WIN3DGI4GCYTEHBTGGOBYGNSDKZTEMY2WEZJTMVRDMZJZGQZWMZJVMU3Q____
                         value: quay.io/devfile/universal-developer-image@sha256:53cec58dd190dd1e06100478ae879d7c28abd8fc883d5fdf5be3eb6e943fe5e7
                       - name: RELATED_IMAGE_che_code_plugin_registry_image_NFXHG2LEMVZHG___
-                        value: quay.io/che-incubator/che-code@sha256:518dd7a3890cd49910ea56a9a3912946940d274c7fca8a84e479df67b82857f1
+                        value: quay.io/che-incubator/che-code@sha256:bcabed906423bdecc1b268728f0eb5e21d6de86ed0436911ae5b3f67a74f5bc5
                       - name: RELATED_IMAGE_che_buildah_base_plugin_registry_image_IBZWQYJSGU3DUNBRG4ZDAM3EHA3DEOLFMRSDSMTGGE4DOYLGMQZWKYTCGNSDQZDDGI4DGMZYMQZTIOBQHFSWENZVMZTGGMTFGA4GCNBQGBTDQZBVGZRA____
                         value: quay.io/eclipse/che-buildah-base@sha256:417203d8629edd92f187afd3ebb3d8dc28338d34809eb75ffc2e08a400f8d56b
                       - name: RELATED_IMAGE_che_sidecar_workspace_data_sync_plugin_registry_image_IBZWQYJSGU3DUOBYMQYDCMRVHAZTOZBVME2TOY3CGI2GEYRTMVSDQMLFGZQTQZRUGEYTSYJVGA2DGYRXHEZDMYTEGJRGIMBRG4YTAOBVGRRTINDGGEYA____
@@ -1280,7 +1287,7 @@ spec:
                         value: registry.access.redhat.com/ubi8-minimal@sha256:2f6b88c037c0503da7704bccd3fc73cb76324101af39ad28f16460e7bce98324
                       - name: RELATED_IMAGE_ubi_minimal_devfile_registry_image_
                         value: registry.access.redhat.com/ubi8/ubi-minimal@sha256:16da4d4c5cb289433305050a06834b7328769f8a5257ad5b4a5006465a0379ff
-                    image: quay.io/eclipse/che-operator@sha256:68fd7b2d651c90c3e101fe836c99135ffe922a3b1927335dcde78de72e349e6d
+                    image: quay.io/eclipse/che-operator@sha256:7396450a283682b2703ee6fb512a105890abe18bc5379360b544cbddde5801ea
                     imagePullPolicy: IfNotPresent
                     livenessProbe:
                       failureThreshold: 10
@@ -1559,12 +1566,12 @@ spec:
   maturity: stable
   provider:
     name: Eclipse Foundation
-  replaces: eclipse-che-preview-openshift.v7.39.2-all-namespaces
-  version: 7.40.0-all-namespaces
+  replaces: eclipse-che-preview-openshift.v7.40.0-all-namespaces
+  version: 7.40.1-all-namespaces
   relatedImages:
-    - name: che-operator-7.40.0
-      image: quay.io/eclipse/che-operator@sha256:68fd7b2d651c90c3e101fe836c99135ffe922a3b1927335dcde78de72e349e6d
-      # tag: quay.io/eclipse/che-operator:7.40.0
+    - name: che-operator-7.40.1
+      image: quay.io/eclipse/che-operator@sha256:7396450a283682b2703ee6fb512a105890abe18bc5379360b544cbddde5801ea
+      # tag: quay.io/eclipse/che-operator:7.40.1
     - name: configbump-0.1.4
       image: quay.io/che-incubator/configbump@sha256:175ff2ba1bd74429de192c0a9facf39da5699c6da9f151bd461b3dc8624dd532
       # tag: quay.io/che-incubator/configbump:0.1.4
@@ -1586,30 +1593,30 @@ spec:
     - name: che-backup-server-rest-b6cc165
       image: quay.io/eclipse/che-backup-server-rest@sha256:023639e023ef5d1370e4381037b6c162733ffa11ef21d902a497034f8e9ab91a
       # tag: quay.io/eclipse/che-backup-server-rest:b6cc165
-    - name: che-dashboard-7.40.0
-      image: quay.io/eclipse/che-dashboard@sha256:04fa782a211721aa332116135e108aa928c6cd0b640261546336a297d0eca915
-      # tag: quay.io/eclipse/che-dashboard:7.40.0
-    - name: che-devfile-registry-7.40.0
-      image: quay.io/eclipse/che-devfile-registry@sha256:92f1aec9db749e752bb1c53f91bc1fca804f0e5b54d4470c4c356410c5bb3c06
-      # tag: quay.io/eclipse/che-devfile-registry:7.40.0
+    - name: che-dashboard-7.40.1
+      image: quay.io/eclipse/che-dashboard@sha256:c0ec680597bd1ea71fe08b6bae36e02494412b4f92a0a27cda92c37e0918e16f
+      # tag: quay.io/eclipse/che-dashboard:7.40.1
+    - name: che-devfile-registry-7.40.1
+      image: quay.io/eclipse/che-devfile-registry@sha256:c684712d9123f283824b080f4c2d258338597284a17bf7ba9075d550729ee1f3
+      # tag: quay.io/eclipse/che-devfile-registry:7.40.1
     - name: che-jwtproxy-0.10.0
       image: quay.io/eclipse/che-jwtproxy@sha256:881d1c91e7f5840314f25104ef5c0acee59ed484a5f9ef39daf3008725ea1033
       # tag: quay.io/eclipse/che-jwtproxy:0.10.0
-    - name: che-keycloak-7.40.0
-      image: quay.io/eclipse/che-keycloak@sha256:9e2c6e38a2c2baf574f7cc50391c1e63a249d4399be68048b50e013775842f21
-      # tag: quay.io/eclipse/che-keycloak:7.40.0
+    - name: che-keycloak-7.40.1
+      image: quay.io/eclipse/che-keycloak@sha256:a30a410e78cd7b15084ff21a846db166eecad33287e71426482722d64a109ec3
+      # tag: quay.io/eclipse/che-keycloak:7.40.1
     - name: che-plugin-artifacts-broker-v3.4.0
       image: quay.io/eclipse/che-plugin-artifacts-broker@sha256:4891a6e19be9eae59372f4b31144653f9bd1284e0301ecfe896a099ca6a12b58
       # tag: quay.io/eclipse/che-plugin-artifacts-broker:v3.4.0
     - name: che-plugin-metadata-broker-v3.4.0
       image: quay.io/eclipse/che-plugin-metadata-broker@sha256:df1ea2eadb28dbc97761adf4ea984af5ca941025a67b39c6abe373816a84bba9
       # tag: quay.io/eclipse/che-plugin-metadata-broker:v3.4.0
-    - name: che-plugin-registry-7.40.0
-      image: quay.io/eclipse/che-plugin-registry@sha256:ded7b41cbfff13a00bbac2dc93c305e4bef9e457d32a47c1e023d3857311f58d
-      # tag: quay.io/eclipse/che-plugin-registry:7.40.0
-    - name: che-server-7.40.0
-      image: quay.io/eclipse/che-server@sha256:cb199aaf25db067a7ee4362771b0133ce923472fee6e71acfa653f6392679e73
-      # tag: quay.io/eclipse/che-server:7.40.0
+    - name: che-plugin-registry-7.40.1
+      image: quay.io/eclipse/che-plugin-registry@sha256:43f0d01ca6abecb356a9ae2ad4297c7387bc8b0e9328692806cb42764653b49c
+      # tag: quay.io/eclipse/che-plugin-registry:7.40.1
+    - name: che-server-7.40.1
+      image: quay.io/eclipse/che-server@sha256:5b0b17f9d40fc1d9ecbb5da714f8d2c9e33ea2cea4e69ec369f5b31e3d31b1b8
+      # tag: quay.io/eclipse/che-server:7.40.1
     - name: origin-kube-rbac-proxy-4.7
       image: quay.io/openshift/origin-kube-rbac-proxy@sha256:fcce680899a37d6bdc621a58b6da0587d01cbb49a2d7b713e0d606dffc9f685a
       # tag: quay.io/openshift/origin-kube-rbac-proxy:4.7
@@ -1697,15 +1704,15 @@ spec:
     - name: che-plugin-sidecar-@sha256:bb404ffaa12565beb12b4cd8160cfa3ff3ef3be420430a6562f1fe48639cbf1f
       image: quay.io/eclipse/che-plugin-sidecar@sha256:bb404ffaa12565beb12b4cd8160cfa3ff3ef3be420430a6562f1fe48639cbf1f
       # tag: quay.io/eclipse/che-plugin-sidecar@sha256:bb404ffaa12565beb12b4cd8160cfa3ff3ef3be420430a6562f1fe48639cbf1f
-    - name: che-theia-@sha256:73588f8d6b5078726e90b48e06f10594758c93532339dc1ec48192e7faa2fc71
-      image: quay.io/eclipse/che-theia@sha256:73588f8d6b5078726e90b48e06f10594758c93532339dc1ec48192e7faa2fc71
-      # tag: quay.io/eclipse/che-theia@sha256:73588f8d6b5078726e90b48e06f10594758c93532339dc1ec48192e7faa2fc71
-    - name: che-machine-exec-@sha256:2e244dd5b3ed0baf00570a21a904b4066a35b1618a0a0fb0aa02e345c4faeeeb
-      image: quay.io/eclipse/che-machine-exec@sha256:2e244dd5b3ed0baf00570a21a904b4066a35b1618a0a0fb0aa02e345c4faeeeb
-      # tag: quay.io/eclipse/che-machine-exec@sha256:2e244dd5b3ed0baf00570a21a904b4066a35b1618a0a0fb0aa02e345c4faeeeb
-    - name: che-theia-endpoint-runtime-binary-@sha256:d4327b40cb3aae5d59f618c0fe5903683ea4fe5a412f4d421f787c77eaf94315
-      image: quay.io/eclipse/che-theia-endpoint-runtime-binary@sha256:d4327b40cb3aae5d59f618c0fe5903683ea4fe5a412f4d421f787c77eaf94315
-      # tag: quay.io/eclipse/che-theia-endpoint-runtime-binary@sha256:d4327b40cb3aae5d59f618c0fe5903683ea4fe5a412f4d421f787c77eaf94315
+    - name: che-theia-@sha256:e9f42e4db2e4045e91a807e3778a6be88ce15301a2ec35f40452f8f14667e937
+      image: quay.io/eclipse/che-theia@sha256:e9f42e4db2e4045e91a807e3778a6be88ce15301a2ec35f40452f8f14667e937
+      # tag: quay.io/eclipse/che-theia@sha256:e9f42e4db2e4045e91a807e3778a6be88ce15301a2ec35f40452f8f14667e937
+    - name: che-machine-exec-@sha256:cc93c56b3e2fd151d76ed66aeae250323732522a6c7e7203988a21c7ee7cf1e0
+      image: quay.io/eclipse/che-machine-exec@sha256:cc93c56b3e2fd151d76ed66aeae250323732522a6c7e7203988a21c7ee7cf1e0
+      # tag: quay.io/eclipse/che-machine-exec@sha256:cc93c56b3e2fd151d76ed66aeae250323732522a6c7e7203988a21c7ee7cf1e0
+    - name: che-theia-endpoint-runtime-binary-@sha256:765c23fda5c85960d6f0df780453530604c7bdf0cc2542b133880851398954ff
+      image: quay.io/eclipse/che-theia-endpoint-runtime-binary@sha256:765c23fda5c85960d6f0df780453530604c7bdf0cc2542b133880851398954ff
+      # tag: quay.io/eclipse/che-theia-endpoint-runtime-binary@sha256:765c23fda5c85960d6f0df780453530604c7bdf0cc2542b133880851398954ff
     - name: che-editor-jupyter-@sha256:83439ae9edcaa3a97536742315a7912f93e499f49847da094c480031eae4ba47
       image: index.docker.io/ksmster/che-editor-jupyter@sha256:83439ae9edcaa3a97536742315a7912f93e499f49847da094c480031eae4ba47
       # tag: index.docker.io/ksmster/che-editor-jupyter@sha256:83439ae9edcaa3a97536742315a7912f93e499f49847da094c480031eae4ba47
@@ -1728,7 +1735,7 @@ spec:
       image: quay.io/devfile/universal-developer-image@sha256:53cec58dd190dd1e06100478ae879d7c28abd8fc883d5fdf5be3eb6e943fe5e7
       # tag: quay.io/devfile/universal-developer-image@sha256:53cec58dd190dd1e06100478ae879d7c28abd8fc883d5fdf5be3eb6e943fe5e7
     - name: che-code-insiders
-      image: quay.io/che-incubator/che-code@sha256:518dd7a3890cd49910ea56a9a3912946940d274c7fca8a84e479df67b82857f1
+      image: quay.io/che-incubator/che-code@sha256:bcabed906423bdecc1b268728f0eb5e21d6de86ed0436911ae5b3f67a74f5bc5
       # tag: quay.io/che-incubator/che-code:insiders
     - name: che-buildah-base-@sha256:417203d8629edd92f187afd3ebb3d8dc28338d34809eb75ffc2e08a400f8d56b
       image: quay.io/eclipse/che-buildah-base@sha256:417203d8629edd92f187afd3ebb3d8dc28338d34809eb75ffc2e08a400f8d56b
