--- a/bundle/next/eclipse-che-preview-openshift/manifests/che-operator.clusterserviceversion.yaml
+++ b/bundle/next/eclipse-che-preview-openshift/manifests/che-operator.clusterserviceversion.yaml
@@ -75,7 +75,7 @@ metadata:
     operators.operatorframework.io/project_layout: go.kubebuilder.io/v3
     repository: https://github.com/eclipse-che/che-operator
     support: Eclipse Foundation
-  name: eclipse-che-preview-openshift.v7.44.0-433.next
+  name: eclipse-che-preview-openshift.v7.45.0-434.next
   namespace: placeholder
 spec:
   apiservicedefinitions: {}
@@ -128,6 +128,10 @@ spec:
             path: auth.gatewayHeaderRewriteSidecarImage
             x-descriptors:
               - urn:alm:descriptor:com.tectonic.ui:hidden
+          - description: Configuration settings related to the User Dashboard used
+              by the Che installation.
+            displayName: User Dashboard
+            path: dashboard
           - description: Configuration settings related to the database used by the
               Che installation.
             displayName: Database
@@ -1276,4 +1280,4 @@ spec:
   maturity: stable
   provider:
     name: Eclipse Foundation
-  version: 7.44.0-433.next
+  version: 7.45.0-434.next
