--- a/charts/index.yaml
+++ b/charts/index.yaml
@@ -84,7 +84,97 @@ entries:
       artifacthub.io/operatorCapabilities: Seamless Upgrades
       artifacthub.io/provider: Eclipse Foundation
     apiVersion: v1
-    created: "2022-04-28T08:45:47.105976856Z"
+    created: "2022-05-20T19:17:22.384050563Z"
+    description: A Helm chart for deploying Eclipse Che on a Kubernetes
+    digest: 5c77e651a5ea45ad6374dcc41ea8967bdf0ac6d72e63cc49720b26faa9f82656
+    name: eclipse-che
+    urls:
+    - https://eclipse-che.github.io/che-operator/charts/stable/eclipse-che-7.48.1.tgz
+    version: 7.48.1
+  - annotations:
+      artifacthub.io/crds: |-
+        - kind: CheCluster
+          version: v1
+          name: checlusters.org.eclipse.che
+          displayName: CheCluster
+          description: The `CheCluster` custom resource allows defining and managing a Che server installation"
+        - kind: CheBackupServerConfiguration
+          version: v1
+          name: chebackupserverconfigurations.org.eclipse.che
+          displayName: CheBackupServerConfiguration
+          description: The `CheBackupServerConfiguration` custom resource allows defining and managing Eclipse Che Backup Server Configurations
+        - kind: CheClusterRestore
+          version: v1
+          name: checlusterrestores.org.eclipse.che
+          displayName: CheClusterRestore
+          description: The `CheClusterRestore` custom resource allows defining and managing Eclipse Che restore
+        - kind: CheClusterBackup
+          version: v1
+          name: checlusterbackups.org.eclipse.che
+          displayName: CheClusterBackup
+          description: The `CheClusterBackup` custom resource allows defining and managing Eclipse Che backup
+      artifacthub.io/crdsExamples: |
+        - apiVersion: org.eclipse.che/v1
+          kind: CheCluster
+          metadata:
+            name: eclipse-che
+            namespace: eclipse-che
+          spec:
+            server:
+              cheClusterRoles: ''
+              cheWorkspaceClusterRole: ''
+              gitSelfSignedCert: false
+              proxyURL: ''
+              proxyPort: ''
+              proxySecret: ''
+              nonProxyHosts: ''
+              workspaceNamespaceDefault: "<username>-che"
+            database:
+              externalDb: false
+              chePostgresHostName: ''
+              chePostgresPort: ''
+              chePostgresSecret: ''
+              chePostgresDb: ''
+            storage:
+              pvcStrategy: 'common'
+              pvcClaimSize: '10Gi'
+              preCreateSubPaths: true
+              postgresPVCStorageClassName: ''
+              workspacePVCStorageClassName: ''
+            auth:
+              identityProviderURL: ''
+              oAuthClientName: ''
+              oAuthSecret: ''
+            k8s:
+              ingressDomain: '192.168.99.101.nip.io'
+              ingressClass: ''
+              tlsSecretName: 'che-tls'
+              securityContextFsGroup: ''
+              securityContextRunAsUser: ''
+            metrics:
+              enable: true
+            devWorkspace:
+              enable: true
+      artifacthub.io/license: EPL-2.0
+      artifacthub.io/links: |
+        - name: repository
+          url: https://github.com/eclipse-che/che-operator
+        - name: web-site
+          url: https://www.eclipse.org/che/
+        - name: docs
+          url: https://www.eclipse.org/che/docs
+        - name: support
+          url: https://github.com/eclipse/che
+      artifacthub.io/maintainers: |
+        - name: Anatolii Bazko
+          email: abazko@redhat.com
+        - name: Oleksandr Andriienko
+          email: oandriie@redhat.com
+      artifacthub.io/operator: "true"
+      artifacthub.io/operatorCapabilities: Seamless Upgrades
+      artifacthub.io/provider: Eclipse Foundation
+    apiVersion: v1
+    created: "2022-05-20T19:17:22.382704538Z"
     description: A Helm chart for deploying Eclipse Che on a Kubernetes
     digest: 0dd57c9b9a2aade95953dc1361bea0090cf71df7b34e54a754829ba7e4a75846
     name: eclipse-che
@@ -174,7 +264,7 @@ entries:
       artifacthub.io/operatorCapabilities: Seamless Upgrades
       artifacthub.io/provider: Eclipse Foundation
     apiVersion: v1
-    created: "2022-04-28T08:45:47.104588745Z"
+    created: "2022-05-20T19:17:22.381398114Z"
     description: A Helm chart for deploying Eclipse Che on a Kubernetes
     digest: 0250cbfc08cc24832250173aa8fb68a193061c2a2314f49b087f7dc2aba58113
     name: eclipse-che
@@ -264,7 +354,7 @@ entries:
       artifacthub.io/operatorCapabilities: Seamless Upgrades
       artifacthub.io/provider: Eclipse Foundation
     apiVersion: v1
-    created: "2022-04-28T08:45:47.103139639Z"
+    created: "2022-05-20T19:17:22.380206493Z"
     description: A Helm chart for deploying Eclipse Che on a Kubernetes
     digest: 9176a85f36a77f63f3d463c19f20dedb725b4ff271eecda6fe419c692873f7ab
     name: eclipse-che
@@ -354,7 +444,7 @@ entries:
       artifacthub.io/operatorCapabilities: Seamless Upgrades
       artifacthub.io/provider: Eclipse Foundation
     apiVersion: v1
-    created: "2022-04-28T08:45:47.10172563Z"
+    created: "2022-05-20T19:17:22.378125755Z"
     description: A Helm chart for deploying Eclipse Che on a Kubernetes
     digest: 670cccd3320d65afc4ef477b7243c91f0ddaba400939e45601684f33747e6fad
     name: eclipse-che
@@ -444,7 +534,7 @@ entries:
       artifacthub.io/operatorCapabilities: Seamless Upgrades
       artifacthub.io/provider: Eclipse Foundation
     apiVersion: v1
-    created: "2022-04-28T08:45:47.100424813Z"
+    created: "2022-05-20T19:17:22.376808131Z"
     description: A Helm chart for deploying Eclipse Che on a Kubernetes
     digest: 4ff3ef346985af1c8cfd4533a078661b1cac5fb391b61f0612bcf305406ca59b
     name: eclipse-che
@@ -563,7 +653,7 @@ entries:
       artifacthub.io/operatorCapabilities: Seamless Upgrades
       artifacthub.io/provider: Eclipse Foundation
     apiVersion: v1
-    created: "2022-04-28T08:45:47.099081Z"
+    created: "2022-05-20T19:17:22.375360404Z"
     description: A Helm chart for deploying Eclipse Che on a Kubernetes
     digest: d542903c6fa5ee2737c0c6de31b28f8061792186eff26cbfd45fb6b804600316
     name: eclipse-che
@@ -698,7 +788,7 @@ entries:
       artifacthub.io/operatorCapabilities: Seamless Upgrades
       artifacthub.io/provider: Eclipse Foundation
     apiVersion: v1
-    created: "2022-04-28T08:45:47.097485103Z"
+    created: "2022-05-20T19:17:22.374137182Z"
     description: A Helm chart for deploying Eclipse Che on a Kubernetes
     digest: bef03cff9f0d9a1c4e8695af9f89bace7483b940b19085c5609387b7e9bf36a8
     name: eclipse-che
@@ -833,7 +923,7 @@ entries:
       artifacthub.io/operatorCapabilities: Seamless Upgrades
       artifacthub.io/provider: Eclipse Foundation
     apiVersion: v1
-    created: "2022-04-28T08:45:47.096021797Z"
+    created: "2022-05-20T19:17:22.37241535Z"
     description: A Helm chart for deploying Eclipse Che on a Kubernetes
     digest: ebb32faf3df08bcb1c0220494b9ff2965b22bbe120afa995e426248cebe96f50
     name: eclipse-che
@@ -968,7 +1058,7 @@ entries:
       artifacthub.io/operatorCapabilities: Seamless Upgrades
       artifacthub.io/provider: Eclipse Foundation
     apiVersion: v1
-    created: "2022-04-28T08:45:47.094053324Z"
+    created: "2022-05-20T19:17:22.371186828Z"
     description: A Helm chart for deploying Eclipse Che on a Kubernetes
     digest: 91c3fee6a8a1985db1458ca8f69f1ce6d4a8c51d247119922c8f06238bd47238
     name: eclipse-che
@@ -1103,7 +1193,7 @@ entries:
       artifacthub.io/operatorCapabilities: Seamless Upgrades
       artifacthub.io/provider: Eclipse Foundation
     apiVersion: v1
-    created: "2022-04-28T08:45:47.092628716Z"
+    created: "2022-05-20T19:17:22.370164409Z"
     description: A Helm chart for deploying Eclipse Che on a Kubernetes
     digest: 485b22612ee63c30e8680fb2fb5e376762deb70487d470d6293c4abf477e5cf9
     name: eclipse-che
@@ -1238,7 +1328,7 @@ entries:
       artifacthub.io/operatorCapabilities: Seamless Upgrades
       artifacthub.io/provider: Eclipse Foundation
     apiVersion: v1
-    created: "2022-04-28T08:45:47.091289802Z"
+    created: "2022-05-20T19:17:22.368920487Z"
     description: A Helm chart for deploying Eclipse Che on a Kubernetes
     digest: 1e47c7db4e8b2056bf65c8cb14f6b1e398bd97f010cd6ccc2db58ea63d92c300
     name: eclipse-che
@@ -1373,7 +1463,7 @@ entries:
       artifacthub.io/operatorCapabilities: Seamless Upgrades
       artifacthub.io/provider: Eclipse Foundation
     apiVersion: v1
-    created: "2022-04-28T08:45:47.089956288Z"
+    created: "2022-05-20T19:17:22.367427859Z"
     description: A Helm chart for deploying Eclipse Che on a Kubernetes
     digest: a404541c568b784ab11f443eb47441807192477879c1be0f8e09d9a2534f9244
     name: eclipse-che
@@ -1508,11 +1598,11 @@ entries:
       artifacthub.io/operatorCapabilities: Seamless Upgrades
       artifacthub.io/provider: Eclipse Foundation
     apiVersion: v1
-    created: "2022-04-28T08:45:47.088912255Z"
+    created: "2022-05-20T19:17:22.365398622Z"
     description: A Helm chart for deploying Eclipse Che on a Kubernetes
     digest: aa4efbd1168883302315f172124bc11f433131a01b70aaf772e08eec3e3d551b
     name: eclipse-che
     urls:
     - https://eclipse-che.github.io/che-operator/charts/stable/eclipse-che-7.39.2.tgz
     version: 7.39.2
-generated: "2022-04-28T08:45:47.087314658Z"
+generated: "2022-05-20T19:17:22.362430868Z"
